--- a/main.css
+++ b/main.css
@@ -35,3 +35,10 @@ img {
     color: #f3c446;
     font-size: 4em;
 }
+
+select {
+    font-size: 2em;
+    border-radius: 20px;
+    width: 300px;
+    padding-left: 20px;
+}
